feat(txt-cleaner): Enhance special character inspector and add modules
Improves the "Show Special Characters" feature significantly by introducing a dynamic, non-clipping tooltip and an "inspection mode" for the input editor, activated by holding the Control key.

- Expands the map of recognized special characters.
- Adds a fallback to identify any non-standard character.
- Replaces the native browser tooltip with a custom, dynamic one to prevent it from being clipped by the UI.
- Implements an "inspection mode" on the input editor, allowing users to hover over special characters without interfering with typing.
- Changes the inspection mode activation key from Alt to Control to avoid system conflicts.

This commit also includes:
- A fix for the `cleanCliToolBorders` module to be less aggressive in its matching.
- The new `cleanShellPrompt` module.
- Bumps the version to 1.1.0.

--- a/txt-cleaner/index.html
+++ b/txt-cleaner/index.html
@@ -13,7 +13,7 @@
             <div class="title">
                 <div class="title-line">
                     <h1>txt-cleaner</h1>
-                    <a href="https://github.com/utforsk/utforsk.github.io/tree/main/txt-cleaner" target="_blank" class="version-link">v1.0.0</a>
+                    <a href="https://github.com/utforsk/utforsk.github.io/tree/main/txt-cleaner" target="_blank" class="version-link">v1.1.0</a>
                 </div>
                 <p>A simple tool to clean and transform text.</p>
             </div>
@@ -21,7 +21,7 @@
 
         <main class="container">
             <div class="panel input-panel">
-                <div class="editor-wrapper">
+                <div class="editor-wrapper" :class="{ 'tooltip-mode': tooltipModeActive }">
                     <textarea v-model="inputText" @scroll="syncScroll" placeholder="Paste your text here..."></textarea>
                     <div class="editor-backdrop" v-html="visualInput"></div>
                 </div>
@@ -105,6 +105,7 @@
             </footer>
         </div>
 
+        <div id="tooltip" class="custom-tooltip" style="display: none; position: fixed; z-index: 9999;"></div>
     </div>
     <script type="module" src="script.js"></script>
 </body>
